<resources>
    <string name="app_name">Meetior</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_publish">Publish</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_notifications">Notifications</string>


    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_more">More</string>
    <string name="title_notifications">notifications</string>
    <string name="title_trending">Trending</string>
    <string name="title_job">Job</string>
</resources>
