<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_publish"
        android:icon="@drawable/ic_all_inclusive_black_24dp"
        android:title="@string/menu_publish" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_help" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_notifications" />
    <item
        android:id="@+id/navigation_exit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="Logout" />

</group>


</menu>
